--- a/css/style.scss
+++ b/css/style.scss
@@ -1,36 +1,60 @@
 @charset "UTF-8";
 
+@mixin mq ($width){
+  @media screen and (max-width: $width + 'px') {
+    @content;
+  }
+}
+
 html {
   font-size: 62.5%;
+
+  @include mq(500){
+    font-size: 50%;
+  }
 }
 
-body{
+body {
   font-size: 1.6rem;
   font-family: Arial, "Helvetica Neue", Helvetica, sans-serif;
-  background-color: #FFF7E8;
-  color: #5E5E5E;
+  background-color: #fff7e8;
+  color: #5e5e5e;
 }
 
-.hd-inr{
+.hd-inr {
+  max-width: 1100px;
   height: 70px;
   display: flex;
   justify-content: space-between;
   align-items: center;
   padding: 0 10px;
+  margin: 0 auto;
 
   h1 {
     font-size: 3.5rem;
   }
 
-  h2{
+  h2 {
     font-size: 1.8rem;
+  }
+}
+
+main{
+  margin-top: 30px;
+
+  #drawingArea{
+    display: block;
+    margin: 0 auto;
+    border: 1px solid #707070;
+    background-color: #fff;
   }
 }
 
 footer {
   text-align: center;
+  margin-top: 30px;
 
-  small{
+  small {
     font-size: 1.4rem;
   }
 }
