--- a/css/style.scss
+++ b/css/style.scss
@@ -9,9 +9,6 @@
 html {
   font-size: 62.5%;
 
-  @include mq(500){
-    font-size: 50%;
-  }
 }
 
 body {
@@ -23,7 +20,7 @@ body {
 
 .hd-inr {
   max-width: 1100px;
-  height: 70px;
+  height: 100px;
   display: flex;
   justify-content: space-between;
   align-items: center;
@@ -40,21 +37,49 @@ body {
 }
 
 main{
-  margin-top: 30px;
-
+  max-width: 1000px;
+  margin: 0 auto;
   #drawingArea{
     display: block;
     margin: 0 auto;
     border: 1px solid #707070;
     background-color: #fff;
   }
+
+  .size-change-alert{
+    color: rgb(245, 145, 145);
+    text-align: center;
+  }
+}
+
+.btn-container{
+  .btn-big{
+    padding: 5px 10px;
+    background: rgb(212, 186, 67);
+    box-shadow: 2px 2px 3px #5e5e5e;
+  }
+  #download-btn{
+    @extend .btn-big;
+  }
 }
 
 footer {
   text-align: center;
   margin-top: 30px;
+  padding-bottom: 30px;
 
   small {
     font-size: 1.4rem;
   }
+}
+
+@include mq(550){
+  html{
+    font-size: 52.5%;
+  }
+}
+
+// margin
+.mt-20{
+  margin-top: 20px;
 }
