--- a/css/style.scss
+++ b/css/style.scss
@@ -1,20 +1,24 @@
 @charset "UTF-8";
 
-@mixin mq ($width){
-  @media screen and (max-width: $width + 'px') {
+@mixin mq($width) {
+  @media screen and (max-width: $width + "px") {
     @content;
   }
 }
 
 html {
   font-size: 62.5%;
-
 }
 
 body {
   font-size: 1.6rem;
   font-family: Arial, "Helvetica Neue", Helvetica, sans-serif;
   background-color: #fff7e8;
+  color: #5e5e5e;
+}
+
+a {
+  text-decoration: none;
   color: #5e5e5e;
 }
 
@@ -36,30 +40,68 @@ body {
   }
 }
 
-main{
+main {
   max-width: 1000px;
   margin: 0 auto;
-  #drawingArea{
+  #drawingArea {
     display: block;
     margin: 0 auto;
     border: 1px solid #707070;
     background-color: #fff;
   }
 
-  .size-change-alert{
+  .size-change-alert {
     color: rgb(245, 145, 145);
     text-align: center;
   }
 }
 
-.btn-container{
-  .btn-big{
+.btn-container {
+  padding: 0 10px;
+
+  .btn-big {
+    color: #5e5e5e;
+    border: none;
+    outline: none;
+    border-radius: 50px;
+    background: #fff7e8;
+    box-shadow: 5px 5px 14px #d1cbbe, -5px -5px 14px #ffffff;
+    transition: 0.1s all linear;
     padding: 5px 10px;
-    background: rgb(212, 186, 67);
-    box-shadow: 2px 2px 3px #5e5e5e;
+    &:hover {
+      box-shadow: none;
+      transform: translateY(2px);
+    }
   }
-  #download-btn{
+  #download-btn {
+    display: inline-block;
     @extend .btn-big;
+    &:hover {
+      box-shadow: none;
+      transform: translateY(2px);
+    }
+  }
+
+  select {
+    color: #5e5e5e;
+    border: none;
+    border-radius: 50px;
+    background: #fff7e8;
+    box-shadow: 5px 5px 14px #d1cbbe, -5px -5px 14px #ffffff;
+    outline: none;
+    padding: 6.5px 10px;
+    transform: translateY(1px);
+    cursor: pointer;
+  }
+  @include mq(478) {
+    #lineWidth {
+      margin-top: 10px;
+    }
+  }
+  @include mq(410) {
+    #penColor {
+      margin-top: 10px;
+    }
   }
 }
 
@@ -73,13 +115,13 @@ footer {
   }
 }
 
-@include mq(550){
-  html{
+@include mq(550) {
+  html {
     font-size: 52.5%;
   }
 }
 
 // margin
-.mt-20{
+.mt-20 {
   margin-top: 20px;
 }
