--- a/css/style.css
+++ b/css/style.css
@@ -4,7 +4,7 @@ html {
 
 body {
   font-size: 1.6rem;
-  font-family: Arial, "Helvetica Neue", Helvetica, sans-serif;
+  font-family: Arial, 'Helvetica Neue', Helvetica, sans-serif;
   background-color: #fff7e8;
   color: #5e5e5e;
 }
@@ -91,6 +91,7 @@ main .size-change-alert {
 }
 
 .btn-container select {
+  position: relative;
   color: #5e5e5e;
   border: none;
   border-radius: 50px;
@@ -102,6 +103,17 @@ main .size-change-alert {
   -webkit-transform: translateY(1px);
           transform: translateY(1px);
   cursor: pointer;
+  -webkit-appearance: none;
+  -moz-appearance: none;
+  appearance: none;
+}
+
+.btn-container select option::after {
+  content: '';
+  border: 2px solid #000;
+  position: absolute;
+  right: 0;
+  top: 0;
 }
 
 @media screen and (max-width: 478px) {
@@ -129,6 +141,11 @@ footer small {
 @media screen and (max-width: 550px) {
   html {
     font-size: 52.5%;
+    overflow: hidden;
+  }
+  footer {
+    margin-top: 10px;
+    padding: 0;
   }
 }
 
