--- a/scss/style.scss
+++ b/scss/style.scss
@@ -1,7 +1,7 @@
 @charset "UTF-8";
 
 @mixin mq($width) {
-  @media screen and (max-width: $width + "px") {
+  @media screen and (max-width: $width + 'px') {
     @content;
   }
 }
@@ -12,7 +12,7 @@ html {
 
 body {
   font-size: 1.6rem;
-  font-family: Arial, "Helvetica Neue", Helvetica, sans-serif;
+  font-family: Arial, 'Helvetica Neue', Helvetica, sans-serif;
   background-color: #fff7e8;
   color: #5e5e5e;
 }
@@ -83,6 +83,7 @@ main {
   }
 
   select {
+    position: relative;
     color: #5e5e5e;
     border: none;
     border-radius: 50px;
@@ -92,6 +93,18 @@ main {
     padding: 6.5px 10px;
     transform: translateY(1px);
     cursor: pointer;
+    -webkit-appearance: none;
+    -moz-appearance: none;
+    appearance: none;
+    option {
+      &::after {
+        content: '';
+        border: 2px solid #000;
+        position: absolute;
+        right: 0;
+        top: 0;
+      }
+    }
   }
   @include mq(478) {
     #lineWidth {
@@ -118,6 +131,11 @@ footer {
 @include mq(550) {
   html {
     font-size: 52.5%;
+    overflow: hidden;
+  }
+  footer {
+    margin-top: 10px;
+    padding: 0;
   }
 }
 
